[options]
scripts = 
	
dependency_links = 
	
packages = 
	find:

[metadata]
name = controlgrid
description = ControlGrid backend command runner
long_description = file: README.md
long_description_content_type = text/markdown
version = 3.0.1
author = Gigaquads
author_email = dg0offset@gmail.com
url = https://github.com/gigaquads/controlgrid-daemon.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[pep8]
max-line-length = 80